Added infrastructure to to switch the Body of the Sheet

--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.scss
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.scss
@@ -1,1 +1,5 @@
 @import "../../../../../gurpsy-material-theme";
+
+.descriptionComponent .sheetComponentBody .flex-container {
+  border:1px solid black;
+}
