--- a/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -2,23 +2,20 @@
   <div class="sheetComponentHeader">
     {{ 'SHEET.PLAYER_INFORMATION.PLAYER_INFORMATION' | translate }}
   </div>
-  <div class="sheetComponentBody flex-container"
-       fxLayout="row"
-       fxLayoutWrap="nowrap"
-       fxLayoutGap="16px">
-    <div class="key flex-container flex-item"
-         fxLayout="column"
-         fxLayoutWrap="nowrap">
-      <label class="flex-item"> {{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</label>
-      <label class="flex-item"> {{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
-      <label class="flex-item"> {{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
-    </div>
-    <div class="value flex-container flex-item"
-         fxLayout="column"
-         fxLayoutWrap="nowrap">
-      <span class="flex-item">{{sheet.metaData.playerInformation.player}}</span>
-      <span class="flex-item">{{sheet.metaData.playerInformation.campaign}}</span>
-      <span class="flex-item">{{sheet.metaData.playerInformation.creationDate}}</span>
-    </div>
+  <div class="sheetComponentBody">
+    <table>
+      <tr>
+        <td>{{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</td>
+        <td>{{sheet.metaData.playerInformation.player}}</td>
+      </tr>
+      <tr>
+        <td>{{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</td>
+        <td>{{sheet.metaData.playerInformation.campaign}}</td>
+      </tr>
+      <tr>
+        <td>{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</td>
+        <td>{{sheet.metaData.playerInformation.creationDate}}</td>
+      </tr>
+    </table>
   </div>
 </div>
