Added a general body component

--- a/src/app/components/sheet-component/sheet-body-component/sheet-body.component.html
+++ b/src/app/components/sheet-component/sheet-body-component/sheet-body.component.html
@@ -1,3 +1,4 @@
+<gurpsy-general-component *ngIf="bodyContent === sheetBodyComponents.GENERAL"></gurpsy-general-component>
 <gurpsy-notes-component *ngIf="bodyContent === sheetBodyComponents.NOTES"></gurpsy-notes-component>
 <gurpsy-skills-component *ngIf="bodyContent === sheetBodyComponents.SKILLS"></gurpsy-skills-component>
 <gurpsy-advantages-component *ngIf="bodyContent === sheetBodyComponents.ADVANTAGES"></gurpsy-advantages-component>
