--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -11,12 +11,12 @@
   </div>
   <div class="sideNavigationContent">
     <button md-button
-            (click)="onSheetBodyClick(sheetBodyComponents.ATTRIBUTES)"
+            (click)="onSheetBodyClick(sheetBodyComponents.GENERAL)"
             class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">accessibility</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SUBJECT.ATTRIBUTES'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.GENERAL'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.ADVANTAGES)"
