--- a/src/app/components/sheet-component/reusable-components/points-component/points.component.html
+++ b/src/app/components/sheet-component/reusable-components/points-component/points.component.html
@@ -1,5 +1,5 @@
 <div class="sheetComponent points">
-  <div class="sheetComponentHeader">
+  <div class="sheetComponentHeader gurpsyThemeHeader">
     <span *ngIf="sheet.points.total">{{sheet.points.total + ' '}}</span>{{ 'SHEET.POINTS.POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
