--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -37,7 +37,7 @@ md-sidenav-container {
   }
 }
 
-md-sidenav-container.gurpsy-dark {
+md-sidenav-container.night {
   background: black !important;
 
   .sideNavigationHeader {
@@ -63,6 +63,8 @@ md-sidenav-container.gurpsy-dark {
     border-radius: 50%;
   }
 }
+
+
 
 
 
