Added the size from the model

--- a/src/app/components/sheet-component/reusable-components/description-component/description.component.html
+++ b/src/app/components/sheet-component/reusable-components/description-component/description.component.html
@@ -37,7 +37,7 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.SIZE' | translate }}</td>
-          <td></td>
+          <td>{{sheet.secondaryCharacteristics.sizeModifier}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.TL' | translate }}</td>
