--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -38,7 +38,7 @@ md-sidenav-container {
 }
 
 md-sidenav-container.night {
-  background: black !important;
+  background: #101822 !important;
 
   .sideNavigationHeader {
     background: url(assets/images/night.png);
