--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -3,7 +3,7 @@
     <gurpsy-side-navigation (onCloseSideNavigation)="sidenav.close()"></gurpsy-side-navigation>
   </md-sidenav>
 
-  <md-toolbar class="flex-container" color="primary">
+  <md-toolbar class="flex-container">
     <button class="flex-item" md-icon-button (click)="sidenav.toggle()">
       <md-icon>menu</md-icon>
     </button>
