--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -6,9 +6,11 @@
 // Mixin to be used to style custom components
 @mixin gurpsy-theme($theme) {
   $accent: map-get($theme, accent);
+
   $primary: map-get($theme, primary);
   $backgroundMap: map-get($theme, background);
   $background: map-get($backgroundMap, background);
+  $selectedButton: map-get($backgroundMap, raised-button);
 
   .sheetComponentHeader {
     background: mat-color($primary);
@@ -25,8 +27,16 @@
     }
 
     .sideNavigationContent {
-      button md-icon {
-        color: mat-color($accent);
+      button {
+        md-icon {
+          color: mat-color($primary, default-contrast);
+        }
+      }
+      button.selected {
+        background: $selectedButton;
+        md-icon {
+          color: mat-color($primary);
+        }
       }
     }
   }
@@ -56,8 +66,8 @@
   );
 }
 
-$primary: mat-palette($gurpsy-day-green, 900);
-$accent: mat-palette($gurpsy-day-green, 600);
+$primary: mat-palette($gurpsy-green, 900);
+$accent: mat-palette($gurpsy-light-blue, 400);
 $warn: mat-palette($gurpsy-red, A700);
 
 $theme: gurpsy-light-theme($primary, $accent, $warn);
@@ -70,8 +80,8 @@ $theme: gurpsy-light-theme($primary, $accent, $warn);
 
 // Place the night theme behind the .night selector
 .night {
-  $dark-primary: mat-palette($gurpsy-night-light-blue, 900);
-  $dark-accent: mat-palette($gurpsy-night-light-blue, 600);
+  $dark-primary: mat-palette($gurpsy-light-blue, 900);
+  $dark-accent: mat-palette($gurpsy-light-blue, 600);
   $dark-warn: mat-palette($mat-deep-orange);
 
   $dark-theme: gurpsy-dark-theme($dark-primary, $dark-accent, $dark-warn);
