--- a/src/gurpsy-palette.scss
+++ b/src/gurpsy-palette.scss
@@ -1,7 +1,7 @@
 $black-87-opacity: rgba(black, 0.87);
 $white-87-opacity: rgba(white, 0.87);
 
-$gurpsy-night-dark-blue: (
+$gurpsy-dark-blue: (
   50: #E4E5E7,
   100: #BBBFC3,
   200: #8D949B,
@@ -34,7 +34,7 @@ $gurpsy-night-dark-blue: (
   )
 );
 
-$gurpsy-night-light-blue: (
+$gurpsy-light-blue: (
   50: #E4F4FD,
   100: #BBE3FB,
   200: #8ED0F9,
@@ -67,7 +67,8 @@ $gurpsy-night-light-blue: (
   )
 );
 
-$gurpsy-day-green: (
+$gurpsy-green: (
+  0: #FFFFFF,
   50: #F3FAE9,
   100: #E0F3C9,
   200: #CBEBA5,
@@ -133,65 +134,28 @@ $gurpsy-red: (
   )
 );
 
-$gurpsy-grey: (
-  0: #ffffff,
-  50: #fafafa,
-  100: #f5f5f5,
-  200: #eeeeee,
-  300: #e0e0e0,
-  400: #bdbdbd,
-  500: #9e9e9e,
-  600: #757575,
-  700: #616161,
-  800: #424242,
-  900: #212121,
-  1000: #000000,
-  A100: #ffffff,
-  A200: #eeeeee,
-  A400: #bdbdbd,
-  A700: #616161,
-  contrast: (
-    0: $black-87-opacity,
-    50: $black-87-opacity,
-    100: $black-87-opacity,
-    200: $black-87-opacity,
-    300: $black-87-opacity,
-    400: $black-87-opacity,
-    500: $black-87-opacity,
-    600: $white-87-opacity,
-    700: $white-87-opacity,
-    800: $white-87-opacity,
-    900: $white-87-opacity,
-    1000: $white-87-opacity,
-    A100: $black-87-opacity,
-    A200: $black-87-opacity,
-    A400: $black-87-opacity,
-    A700: $white-87-opacity,
-  )
-);
-
 // Background palette for day theme.
 $gurpsy-light-theme-background: (
-  status-bar: map_get($gurpsy-grey, 300),
-  app-bar: map_get($gurpsy-grey, 100),
-  background: map_get($gurpsy-grey, 50),
-  hover: rgba(black, 0.04),
+  status-bar: map_get($gurpsy-green, 300),
+  app-bar: map_get($gurpsy-green, 300),
+  background: map_get($gurpsy-green, 0),
+  hover: map_get($gurpsy-green, 50),
   card: white,
   dialog: white,
   disabled-button: rgba(black, 0.12),
-  raised-button: white,
+  raised-button: map_get($gurpsy-green, 100),
 );
 
 // Background palette for night theme.
 $gurpsy-dark-theme-background: (
   status-bar: black,
-  app-bar: map_get($gurpsy-night-dark-blue, 500),
-  background: map-get($gurpsy-night-dark-blue, 700),
+  app-bar: map_get($gurpsy-dark-blue, 500),
+  background: map-get($gurpsy-dark-blue, 700),
   hover: rgba(white, 0.04),
-  card: map_get($gurpsy-night-dark-blue, 600),
-  dialog: map_get($gurpsy-night-dark-blue, 700),
+  card: map_get($gurpsy-dark-blue, 600),
+  dialog: map_get($gurpsy-dark-blue, 700),
   disabled-button: rgba(white, 0.12),
-  raised-button: map-get($gurpsy-night-dark-blue, 800),
+  raised-button: map-get($gurpsy-dark-blue, 900),
 );
 
 // Foreground palette for day theme.
