Test voor studenten

--- a/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
@@ -9,3 +9,4 @@
   </div>
   <gurpsy-description-component></gurpsy-description-component>
 </div>
+<gurpsy-attributes-component></gurpsy-attributes-component>
