--- a/src/app/components/sheet-component/reusable-components/attributes-component/attributes.component.scss
+++ b/src/app/components/sheet-component/reusable-components/attributes-component/attributes.component.scss
@@ -3,6 +3,9 @@
 .sheetComponent .sheetComponentBody table {
   border-collapse: collapse;
 
+  td:last-child {
+    text-align: right;
+  }
   tr.last {
     border-bottom: 1pt solid black;
   }
