Added Hitlocation Component

--- a/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/general-component/general.component.html
@@ -9,4 +9,11 @@
   </div>
   <gurpsy-description-component></gurpsy-description-component>
 </div>
-<gurpsy-attributes-component></gurpsy-attributes-component>
+
+<div class="flex-container"
+     fxLayout="row"
+     fxLayoutAlign="space-between stretch"
+     fxLayoutWrap="nowrap">
+  <gurpsy-attributes-component></gurpsy-attributes-component>
+  <gurpsy-hit-location-component></gurpsy-hit-location-component>
+</div>
