--- a/src/app/components/sheet-component/reusable-components/attributes-component/attributes.component.html
+++ b/src/app/components/sheet-component/reusable-components/attributes-component/attributes.component.html
@@ -62,11 +62,19 @@
                fxLayout="row"
                fxLayoutAlign="space-between stretch"
                fxLayoutWrap="nowrap">
-            <div class="flex-item">
-              {{ 'SHEET.ATTRIBUTES.THR' | translate }} {{sheet.secondaryCharacteristics.damageThrusting}}
+            <div class="flex-item flex-container"
+                 fxLayout="row"
+                 fxLayoutWrap="nowrap"
+                 fxLayoutGap="8px">
+              <div class="flex-item">{{ 'SHEET.ATTRIBUTES.THR' | translate }}</div>
+              <div class="flex-item">{{sheet.secondaryCharacteristics.damageThrusting}}</div>
             </div>
-            <div class="flex-item">
-              {{ 'SHEET.ATTRIBUTES.SW' | translate }} {{sheet.secondaryCharacteristics.damageSwinging}}
+            <div class="flex-item flex-container"
+                 fxLayout="row"
+                 fxLayoutWrap="nowrap"
+                 fxLayoutGap="8px">
+              <div class="flex-item">{{ 'SHEET.ATTRIBUTES.SW' | translate }}</div>
+              <div class="flex-item">{{sheet.secondaryCharacteristics.damageSwinging}}</div>
             </div>
           </div>
         </td>
