First draft of the Skills component

--- a/src/app/components/sheet-component/reusable-components/hit-location-component/hit-location.component.html
+++ b/src/app/components/sheet-component/reusable-components/hit-location-component/hit-location.component.html
@@ -3,7 +3,7 @@
     {{ 'SHEET.HIT_LOCATION.HIT_LOCATION' | translate }}
   </div>
   <div class="sheetComponentBody">
-    <table>
+    <table class="headerRowTable">
       <tr class="headerRow">
         <td>{{ 'SHEET.HIT_LOCATION.ROLL' | translate }}</td>
         <td>{{ 'SHEET.HIT_LOCATION.WHERE' | translate }}</td>
