--- a/src/app/components/sheet-component/reusable-components/skills-component/skills.component.html
+++ b/src/app/components/sheet-component/reusable-components/skills-component/skills.component.html
@@ -1,8 +1,20 @@
 <div class="sheetComponent">
-  <div class="sheetComponentHeader">
-    {{ 'SHEET.SKILLS' | translate }}
-  </div>
   <div class="sheetComponentBody">
-
+    <table class="headerRowTable">
+      <tr class="headerRow">
+        <td>{{ 'SHEET.SKILLS.SKILL' | translate }}</td>
+        <td>{{ 'SHEET.SKILLS.SL' | translate }}</td>
+        <td>{{ 'SHEET.SKILLS.RSL' | translate }}</td>
+        <td>{{ 'SHEET.SKILLS.PTS' | translate }}</td>
+        <td>{{ 'SHEET.SKILLS.REF' | translate }}</td>
+      </tr>
+      <tr *ngFor="let skill of sheet.skills;">
+        <td>{{skill.name}}</td>
+        <td>{{skill.points}}</td>
+        <td>{{skill.controllingAttribute}}{{skill.level}}</td>
+        <td>{{skill.points}}</td>
+        <td>{{skill.pageReference}}</td>
+      </tr>
+    </table>
   </div>
 </div>
