--- a/src/app/components/sheet-component/sheet.component.scss
+++ b/src/app/components/sheet-component/sheet.component.scss
@@ -44,4 +44,11 @@
       }
     }
   }
+  table.headerRowTable {
+    tr:nth-child(2) {
+      td {
+        padding-top: 6px;
+      }
+    }
+  }
 }
