Implemented the equipment component

--- a/src/app/components/sheet-component/reusable-components/equipment-component/equipment.component.html
+++ b/src/app/components/sheet-component/reusable-components/equipment-component/equipment.component.html
@@ -3,6 +3,8 @@
     {{ 'SHEET.EQUIPMENT' | translate }}
   </div>
   <div class="sheetComponentBody">
-    Equipment body
+    <div *ngFor="let equipment of sheet.equipments;">
+      <div>{{equipment.name}}</div>
+    </div>
   </div>
 </div>
