Renaming the Magic component into Spells Component

--- a/src/app/components/sheet-component/structural-components/sheet-body-component/sheet-body.component.html
+++ b/src/app/components/sheet-component/structural-components/sheet-body-component/sheet-body.component.html
@@ -13,6 +13,6 @@
 <gurpsy-equipment-component
   *ngIf="bodyContent === sheetBodyComponents.EQUIPMENT">
 </gurpsy-equipment-component>
-<gurpsy-magic-component
+<gurpsy-spells-component
   *ngIf="bodyContent === sheetBodyComponents.MAGIC">
-</gurpsy-magic-component>
+</gurpsy-spells-component>
